2009-04-17  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document new ejabberdctl option. New section that
	documents AccessCommands. (EJAB-910)
	* doc/guide.html: Likewise

	* src/ejabberd_ctl.erl: New option to require auth in ejabberdctl
	and restrict what commands and arguments can execute (EJAB-910)
	* src/ejabberd_config.erl: Likewise

	* src/ejabberd_commands.erl: API to restrict who can execute what
	commands and arguments (EJAB-910)

	* src/mod_caps.erl: Fix unbound variable

2009-04-14  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that the recommended Erlang/OTP version
	is R12B-5, and R13 is not supported yet.
	* doc/guide.html: Likewise
	* README: Likewise

	* src/mod_muc/mod_muc_log.erl: Linkify also xmpp:..., as it was
	done previously (thanks to Konstantin Khomoutov)(EJAB-850)

2009-03-20  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: Better handling of presence hook and caps clean
	(thanks to Jonathan Schleifer)(EJAB-707)
	* src/ejabberd_c2s.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Improve invalid-payload check, send
	last published item to new resource only, thread message sending.

2009-04-09  Badlop  <badlop@process-one.net>

	* src/msgs/pl.po: Fix some translations (thanks to Andrzej Smyk)

2009-04-08  Badlop  <badlop@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Announce PubSub features in the
	server JID only if PEP is enabled (EJAB-905)

	* src/mod_muc/mod_muc.erl: English fixes (thanks to Glenn Sieb)
	* src/mod_muc/mod_muc_log.erl: Likewise
	* src/mod_muc/mod_muc_room.erl: Likewise
	* src/mod_register.erl: Likewise
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Quickfix compilation errors.

	* src/mod_irc/mod_irc_connection.erl: Fix compilation warnings.

2009-04-01  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.5.txt: Added file for new release

2009-03-24  Badlop  <badlop@process-one.net>